<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Oyun Platformu</string>
    <string name="sec_ve_basla">Seç ve Başla!</string>
    <string name="journey" />
    <string name="noughts" />
    <string name="tourist_info" />
    <string name="titanic">Titanic</string>
    <string name="bilet_sinifi">Bilet Sınıfınızı Seçin:</string>
    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked.</string>
    <string name="cinsiyet_text">Cinsiyetinizi Seçiniz:</string>
    <string name="cocuk_es_text">Çocuk-Eş Durumunuzu Seçiniz:</string>
    <string name="cocukvar_esyok">Çocuğum var, eşim yok</string>
    <string name="cocukvar_esvar">Çocuğum var, eşim var</string>
    <string name="cocukyok_esvar">Çocuğum yok, eşim var</string>
    <string name="cocukyok_esyok">Çocuğum yok, eşim yok</string>
    <string name="yas_araligi">Yaş Aralığınızı Seçiniz:</string>
    <string name="ilk_aralik">0-20</string>
    <string name="ikinci_aralik">20-40</string>
    <string name="ucuncu_aralik">40-60</string>
    <string name="dorduncu_aralik">60+</string>
    <string name="odenen_para">Ne Kadar Para Ödediniz?</string>
    <string name="odenen_ilk">30dan Az</string>
    <string name="odenen_ikinci">30dan Çok</string>
    <string name="survive">TEBRİKLER! KURTULDUNUZ!</string>
    <string name="not_survive">MAALESEF KURTULAMADINIZ!</string>
    <string name="sonuc">Sonucu Göster</string>
    <string name="btn_titanic_text">Titanic</string>
    <string name="btn_journey_text">Journey to School</string>
    <string name="btn_dice_text">Dice Roller</string>
    <string name="yas_text">Yaş Aralığınızı Seçiniz:</string>
    <string name="yas5">5-10 Yaş</string>
    <string name="yas10">10-15 Yaş</string>
    <string name="uzaklik_text">Okulunuza Olan Uzaklığınızı Belirtilen Aralıklardan Seçiniz:</string>
    <string name="uzaklik0_text">0-1.5 km</string>
    <string name="uzaklik1_text">1.5 km+</string>
    <string name="arkadas_text">Arkadaş Sayınızı Seçiniz:</string>
    <string name="arkadas0_text">0</string>
    <string name="arkadas1_text">1 Veya Daha Fazla</string>
    <string name="btn_sonuc_text_journey">Sonucu Göster</string>
    <string name="bisiklet">Bisikletle Gidebilirsiniz..</string>
    <string name="araba">Arabayla Gidebilirsiniz..</string>
    <string name="yürüme">Yürüyerek Gidebilirsiniz..</string>
    <string name="zar_tahmin">Sizce Zar Yüzeyinde Çıkacak Sayı Kaç Olacak?</string>
    <string name="zar1">1</string>
    <string name="zar2">2</string>
    <string name="zar3">3</string>
    <string name="zar4">4</string>
    <string name="zar5">5</string>
    <string name="zar6">6</string>
    <string name="dogru_tahmin_zar">Doğru Tahmin!</string>
    <string name="yanlis_tahmin_zar">Yanlış Tahmin!</string>
    <string name="btn_sayi_text">Number Prediction</string>
    <string name="btn_tourist_info_text">Tourist Info</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="kadin_text">Kadın</string>
    <string name="erkek_text">Erkek</string>
    <string name="tuttugum_sayi_text">1-100 Arası Tuttuğum Sayıyı Tahmin Et!</string>
    <string name="btn_tahmin_text">TAHMİN ET</string>
    <string name="btn_yeniden_text">YENİDEN OYNA</string>
    <string name="btn_tic_tac_text">Noughts     And Crosses</string>
    <string name="btn_sac_text">Hair Models For Women</string>
    <string name="reset_text">Reset</string>
    <string name="default_player_turn_text">Player 1\'s turn (X)</string>
    <string name="restart_game_button_text">Restart Game</string>
    <string name="restart_match_button_text">Restart Match</string>
    <string name="heading">Noughts And Crosses</string>
    <string name="status">Oynamak İçin Tıkla</string>
    <string name="yuz_text">Yüz Şeklinizi Seçiniz:</string>
    <string name="kas_text">Kaş Şeklinizi Seçiniz:</string>
    <string name="sac_tahmin_text">Size Yakışabilecek Saç Modeli:</string>
    <string name="btn_tahmin_text_sac">Modeli Göster</string>
    <string name="oval_text">Oval</string>
    <string name="ucgen_text">Üçgen</string>
    <string name="kare_text">Kare</string>
    <string name="koseli_kas_text">Köşeli</string>
    <string name="duz_kas_text">Düz</string>
    <string name="kavisli_kas_text">Kavisli</string>
    <string name="heading_sac">Size Yakışabilecek Saç Modelini Bulalım!</string>
    <string name="btn_kutuphane_text">Find The Book</string>
    <string name="btn_zombi_text">Escape From Zombie</string>
    <string name="ozellikler">Kitabınızla İlgili Özellikleri Seçiniz..</string>
    <string name="uyg_baslik">Kitapları Okuyabilecek Yaş Aralıklarını Bulalım</string>
    <string name="tur_sec">Kitap Türü Seçiniz:</string>
    <string name="masal">Masal</string>
    <string name="bilim">Bilim</string>
    <string name="siir">Şiir</string>
    <string name="roman">Roman</string>
    <string name="konu">Kitap Konusu Seçiniz:</string>
    <string name="cocuk">Çocuk</string>
    <string name="uzay">Uzay</string>
    <string name="romantik">Romantik</string>
    <string name="dusunce">Düşünce</string>
    <string name="psikoloji">Psikoloji</string>
    <string name="aksiyon">Aksiyon</string>
    <string name="btn_bul_text">YAŞ ARALIĞINI BUL</string>
    <string name="kitap_sonuc">Sonuç:</string>
    <string name="yas_16">16 Yaş Ve Üstü Okuyabilir.</string>
    <string name="yas_17">17 Yaş Ve Üstü Okuyabilir.</string>
    <string name="yas_15">15 Yaş Ve Üstü Okuyabilir.</string>
    <string name="yas_12">12 Yaş Ve Üstü Okuyabilir.</string>
    <string name="yas_14">14 Yaş Ve Üstü Okuyabilir.</string>
    <string name="herkes">Herkes Okuyabilir.</string>
    <string name="heading_journey">Okula Nasıl Gideceksiniz?</string>
    <string name="zombie_tanitim_baslik">Zombiden kaçmak için uygun odayı bulabilecek misin? Hazırsan başla!</string>
    <string name="zombie_tanitim" tools:ignore="DuplicateDefinition">Zombiler fazla parlak ışık kaynaklarından ve fazla parlak renklerden pek hoşlanmazlar. Parlak şeyler görmelerini engeller. Nemli ve sıcak ortamları severler. En ufak sese gelebilirler. Sert zeminler hareket etmeleri için daha kullanışlıdır.</string>
    <string name="zombi_heading">İstediğin özellikleri seçerek odanı oluştur, kaçmaya çalış!</string>
    <string name="isik_turu">Işık Türü Seçiniz:</string>
    <string name="nem_miktari">Nem Miktarı Seçiniz:</string>
    <string name="zemin">Zemin Seçiniz:</string>
    <string name="sicaklik">Sıcaklık Giriniz:</string>
    <string name="pencere">Pencere Sayısı Giriniz:</string>
    <string name="gurultu">Gürültü Derecesi Giriniz:</string>
    <string name="btn_sifreleme_text">Decrypt</string>
    <string name="btn_tavsan_text">Fortune Rabbit</string>
    <string name="sifreleme">Şifrelemek İstediğiniz Kelimeyi Girin:</string>
    <string name="sifrele_btn_text">ŞİFRELE</string>
    <string name="sifre_cozme">Şifresini Çözmek İstediğiniz Kelimeyi Girin:</string>
    <string name="sifre_coz_btn_text">ŞİFRE ÇÖZ</string>
    <string name="btn_niyet_text">NİYET ÇEK</string>
    <string name="niyet_heading">Niyet Tavşanı</string>
    <string name="isik_yok">Işık Yok</string>
    <string name="floresan">Floresan Lamba</string>
    <string name="los">Loş Işık</string>
    <string name="kuru">Kuru Ortam</string>
    <string name="az_nemli">Az Nemli Ortam</string>
    <string name="nemli_ortam">Nemli Ortam</string>
    <string name="hali">Halı</string>
    <string name="tas">Taş</string>
    <string name="btn_sec_text">SEÇ!</string>
    <string name="heading_sifreleme">Şifrele ve Çöz</string>
    <string name="btn_tekrar_text">Tekrar Oyna</string>
</resources>
